[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Enemy03.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemy_03_body.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Enemy03" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 1 )

[node name="Col" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="RotPosA" type="Position2D" parent="."]
position = Vector2( -7, -7 )

[node name="ColRayARight" type="RayCast2D" parent="."]
position = Vector2( -7, 7 )
enabled = true
cast_to = Vector2( -2, 0 )
collide_with_areas = true

[node name="ColRayALeft" type="RayCast2D" parent="."]
position = Vector2( 7, -7 )
enabled = true
cast_to = Vector2( 0, -2 )
collide_with_areas = true

[node name="RotPosB" type="Position2D" parent="."]
position = Vector2( 7, -7 )

[node name="ColRayBRight" type="RayCast2D" parent="."]
position = Vector2( -7, -7 )
enabled = true
cast_to = Vector2( 0, -2 )
collide_with_areas = true

[node name="ColRayBLeft" type="RayCast2D" parent="."]
position = Vector2( 7, 7 )
enabled = true
cast_to = Vector2( 2, 0 )
collide_with_areas = true

[node name="RotPosC" type="Position2D" parent="."]
position = Vector2( 7, 7 )

[node name="ColRayCRight" type="RayCast2D" parent="."]
position = Vector2( 7, -7 )
enabled = true
cast_to = Vector2( 2, 0 )
collide_with_areas = true

[node name="ColRayCLeft" type="RayCast2D" parent="."]
position = Vector2( -7, 7 )
enabled = true
cast_to = Vector2( 0, 2 )
collide_with_areas = true

[node name="RotPosD" type="Position2D" parent="."]
position = Vector2( -7, 7 )

[node name="ColRayDRight" type="RayCast2D" parent="."]
position = Vector2( 7, 7 )
enabled = true
cast_to = Vector2( 0, 2 )
collide_with_areas = true

[node name="ColRayDLeft" type="RayCast2D" parent="."]
position = Vector2( -7, -7 )
enabled = true
cast_to = Vector2( -2, 0 )
collide_with_areas = true
